issue #2 - added gitlab backup; added common backup (for ssh keys); added tags install and backup

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -7,3 +7,5 @@
   roles:
     - common
     - gitlab
+    # see discussion: https://github.com/ansible/ansible/issues/5952
+    #- { role: gitlab, tags: [ "install" ] }
