issue #3 - added jenkins installation role - added openjdk-7 installation to common role

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -9,3 +9,4 @@
     - gitlab
     # see discussion: https://github.com/ansible/ansible/issues/5952
     #- { role: gitlab, tags: [ "install" ] }
+    - jenkins
