--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -25,11 +25,17 @@
 - name: install base applications
   apt: "pkg={{item}} state=installed update_cache=yes"
   with_items:
-    - ntp
     - apt-transport-https
-    - curl
-    - openssh-server
     - ca-certificates
+    - curl
+    - ntp
+    - openjdk-7-jdk
+    - openjdk-7-jre
+    - openssh-server
+  tags: install
+
+- name: correct java version selected
+  alternatives: name=java path=/usr/lib/jvm/java-7-openjdk-amd64/jre/bin/java
   tags: install
 
 # start necessary services
@@ -37,6 +43,7 @@
   service: name=ntp state=started enabled=true
   tags: install
 
+# scripts related
 - name: create scripts_dir
   file: "path={{ scripts_dir }} state=directory mode=0777"
   tags:
