issue #3 - added jenkins backup and restore; commons install openjdk

--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -28,10 +28,14 @@
     - apt-transport-https
     - ca-certificates
     - curl
+    - git
     - ntp
     - openjdk-7-jdk
     - openjdk-7-jre
     - openssh-server
+    # optional utilities
+    - tree
+    - vim
   tags: install
 
 - name: correct java version selected
