--- a/provisioning/roles/jenkins/handlers/main.yml
+++ b/provisioning/roles/jenkins/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
+- name: start jenkins
+  service: name=jenkins state=started
+  
 - name: restart jenkins
   service: name=jenkins state=restarted
