--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -10,3 +10,4 @@
     # see discussion: https://github.com/ansible/ansible/issues/5952
     #- { role: gitlab, tags: [ "install" ] }
     - jenkins
+    - sonarqube
