issue #6 - removed 'owner=root' and 'group=root' note the folder is inside /vagrant. Seems ansible cannot chown file to root and fallbacks to vagrant user. This marks the task as 'changed'. Not setting 'owner' and 'group' solves the problem.

--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -56,7 +56,7 @@
     - restore
 
 - name: copy functions.sh
-  copy: "src=functions.sh dest={{ scripts_dir }}/functions.sh owner=root group=root mode=0755"
+  copy: "src=functions.sh dest={{ scripts_dir }}/functions.sh mode=0755"
   tags:
     - install
     - backup
