issue #4 #6 - added sonarqube backup and restore commons role defines timestamp variable for naming strategy of backups added get_newest_file script backup and restore of sonarqube implemented only with ansible (no bash scripts)

--- a/provisioning/roles/sonarqube/handlers/main.yml
+++ b/provisioning/roles/sonarqube/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
+- name: start sonarqube
+  service: name=sonar state=started
+  
 - name: restart sonarqube
   service: name=sonar state=restarted
