--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -6,8 +6,8 @@
   sudo: True
   roles:
     - common
-    - gitlab
-    # see discussion: https://github.com/ansible/ansible/issues/5952
-    #- { role: gitlab, tags: [ "install" ] }
-    - jenkins
+#    - gitlab
+#    # see discussion: https://github.com/ansible/ansible/issues/5952
+#    #- { role: gitlab, tags: [ "install" ] }
+#    - jenkins
     - sonarqube
