--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -7,6 +7,11 @@
    - empty_fallback.yml
   tags: install
 
+- name: define timestamp variable (for backups)
+  command: date +%Y%m%d-%H%M%S
+  register: timestamp
+  tags: backup
+
 - name: use apt-cache
   template: src=01_proxy.j2 dest=/etc/apt/apt.conf.d/01_proxy owner=root group=root mode=644
   sudo: true
@@ -57,6 +62,13 @@
 
 - name: copy functions.sh
   copy: "src=functions.sh dest={{ scripts_dir }}/functions.sh mode=0755"
+  tags:
+    - install
+    - backup
+    - restore
+
+- name: copy get_newest_file.sh
+  copy: "src=get_newest_file.sh dest={{ scripts_dir }}/get_newest_file.sh mode=0755"
   tags:
     - install
     - backup
