--- a/provisioning/roles/sonarqube/tasks/main.yml
+++ b/provisioning/roles/sonarqube/tasks/main.yml
@@ -16,17 +16,10 @@
     - python-mysqldb
   tags: install
 
-# setup backup folder
-- name: create backup folder
-  file: "path={{ backup_dir_sonarqube }} state=directory mode=0777"
-  tags:
-    - install
-    - backup
-    - restore
 
 # configure sonarqube
 - name: configure sonarqube
-  template: src=sonar.properties.j2 dest=/opt/sonar/conf/sonar.properties owner=root group=root mode=755
+  template: src=sonar.properties.j2 dest=/opt/sonar/conf/sonar.properties owner={{ sonar_user }} group={{ sonar_group }} mode=644
   notify: restart sonarqube
   tags: install
 
@@ -36,33 +29,89 @@
   tags: install
 
 - name: configure sonarqube mysql - default user
-  mysql_user: name=sonar host=localhost password=sonar priv=sonar.*:ALL,GRANT state=present
+  mysql_user: "name={{ sonar_db_user }} host=localhost password={{ sonar_db_pass }} priv=sonar.*:ALL,GRANT state=present"
   notify: restart sonarqube
   tags: install
 
-# ################################################################################
-# # backup
-# ################################################################################
-# - name: copy backup script
-#   template: "src=backup.sh.j2 dest={{ scripts_dir }}/backup_sonarqube.sh owner=root group=root mode=0755"
-#   tags: backup
-# 
-# - name: perform backup
-#   shell: "sh -c '{{ scripts_dir }}/backup_sonarqube.sh'"
-#   tags: backup
-# 
-# ################################################################################
-# # restore
-# ################################################################################
-# - name: copy restore script
-#   template: "src=restore.sh.j2 dest={{ scripts_dir }}/restore_sonarqube.sh owner=root group=root mode=0755"
-#   tags: restore
-# 
-# - name: stop sonarqube
-#   service: name=sonarqube state=stopped
-#   tags: restore
-# 
-# - name: perform restore
-#   shell: "sh -c '{{ scripts_dir }}/restore_sonarqube.sh'"
-#   notify: start sonarqube
-#   tags: restore
+################################################################################
+# backup
+################################################################################
+
+# setup backup folder & stop service
+- name: create backup folder
+  file: "path={{ backup_dir_sonarqube }} state=directory mode=0777"
+  tags: backup
+
+- name: stop sonarqube
+  service: name=sonar state=stopped
+  tags: backup
+
+# backup database
+- name: backup sonar db
+  mysql_db:
+    name={{ sonar_db_name }}
+    target={{ backup_dir_sonarqube }}/{{ timestamp.stdout }}_{{ sonar_backup_db_filename }}
+    state=dump
+  notify: start sonarqube
+  tags: backup
+
+# backup configurations
+- name: "backup {{ sonar_dir }}/conf"
+  command: "tar -cf {{ backup_dir_sonarqube }}/{{ timestamp.stdout }}_{{ sonar_backup_conf_filename }} -C / {{ sonar_dir }}/conf"
+  notify: start sonarqube
+  tags: backup
+
+# backup plugins
+- name: "backup {{ sonar_dir }}/extensions/plugins"
+  command: "tar -cf {{ backup_dir_sonarqube }}/{{ timestamp.stdout }}_{{ sonar_backup_plugins_filename }} -C / {{ sonar_dir }}/extensions/plugins"
+  notify: start sonarqube
+  tags: backup
+
+################################################################################
+# restore
+################################################################################
+
+# stop service
+- name: stop sonarqube
+  service: name=sonar state=stopped
+  tags: backup
+
+# restore database
+- name: "restore sonar db - find latest backup"
+  command: "{{ scripts_dir }}/get_newest_file.sh {{ backup_dir_sonarqube }} {{ sonar_backup_db_filename }}"
+  register: sonar_backup_file
+  ignore_errors: True
+  tags: restore
+
+- name: restore sonar db - mysql import latest_dump.sql
+  mysql_db:
+    state=import
+    name={{ sonar_db_name }}
+    target={{ backup_dir_sonarqube }}/{{ sonar_backup_file.stdout }}
+  when: sonar_backup_file|success
+  notify: start sonarqube
+  tags: restore
+
+# restore configurations
+- name: "restore {{ sonar_dir }}/conf - find latest backup"
+  command: "{{ scripts_dir }}/get_newest_file.sh {{ backup_dir_sonarqube }} {{ sonar_backup_conf_filename }}"
+  register: sonar_backup_file
+  ignore_errors: True
+  tags: restore
+
+- name: "restore {{ sonar_dir }}/conf - untar backup"
+  unarchive: src={{ backup_dir_sonarqube }}/{{ sonar_backup_file.stdout }} dest=/ copy=no
+  tags: restore
+  when: sonar_backup_file|success
+
+# restore configurations
+- name: "restore {{ sonar_dir }}/extensions/plugins - find latest backup"
+  command: "{{ scripts_dir }}/get_newest_file.sh {{ backup_dir_sonarqube }} {{ sonar_backup_plugins_filename }}"
+  register: sonar_backup_file
+  ignore_errors: True
+  tags: restore
+
+- name: "restore {{ sonar_dir }}/extensions/plugins - untar backup"
+  unarchive: src={{ backup_dir_sonarqube }}/{{ sonar_backup_file.stdout }} dest=/ copy=no
+  tags: restore
+  when: sonar_backup_file|success
