issues #2 #3 #4 #6: added fdupes to remove duplicated backups

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -6,8 +6,8 @@
   sudo: True
   roles:
     - common
-#    - gitlab
+    - gitlab
 #    # see discussion: https://github.com/ansible/ansible/issues/5952
 #    #- { role: gitlab, tags: [ "install" ] }
-#    - jenkins
+    - jenkins
     - sonarqube
