--- a/provisioning/roles/jenkins/tasks/main.yml
+++ b/provisioning/roles/jenkins/tasks/main.yml
@@ -95,6 +95,11 @@
   notify: start jenkins
   tags: backup
 
+# remove duplicated backups
+- name: remove duplicated backups
+  command: "fdupes -dN {{ backup_dir_jenkins }}"
+  tags: backup
+
 ################################################################################
 # restore
 ################################################################################
