--- a/provisioning/roles/sonarqube/tasks/main.yml
+++ b/provisioning/roles/sonarqube/tasks/main.yml
@@ -66,6 +66,11 @@
   notify: start sonarqube
   tags: backup
 
+# remove duplicated backups
+- name: remove duplicated backups
+  command: "fdupes -dN {{ backup_dir_sonarqube }}"
+  tags: backup
+
 ################################################################################
 # restore
 ################################################################################
